[gd_scene load_steps=3 format=3 uid="uid://clippy_ui_scene"]

[ext_resource type="Script" path="res://src/clippy/ClippyUI.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clippy_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 0.9, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.5)

[node name="ClippyUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1")
auto_dismiss_time = 8.0
show_icon = true

[node name="ClippyPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -180.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_clippy_panel")

[node name="MarginContainer" type="MarginContainer" parent="ClippyPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="ClippyPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="ClippyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CharacterIcon" type="TextureRect" parent="ClippyPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="ClippyPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "ðŸ¤– Asistente"
vertical_alignment = 1

[node name="DismissButton" type="Button" parent="ClippyPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
text = "âœ•"

[node name="MessageLabel" type="RichTextLabel" parent="ClippyPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Â¡Hola! Soy tu asistente. Te ayudarÃ© durante tu aventura."
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
